# multi-agent-ai

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  PORT_CHANGES.md  README.md  TESTING.md  acpmcp_client.py  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
client/: web_client.py
client/templates/: index.html
db/: chroma.sqlite3
docs/diagrams/: orchestrator_flow.mmd  orchestrator_sequence.mmd
scripts/: build.sh  ci-pipeline.sh  clean-env.sh  create-venv.sh  fix-venv-lock.sh  format.sh  merge-to-github.sh  quick-push.sh  render-diagrams-npm.sh  render-diagrams.sh  service-manager.sh  test.sh  verify-config.sh
server/: acpmcp_server.py  agent_orchestrator.py  fastapi_agent_server.py  insurance_agent_server.py  mcpserver.py  simple_server.py
tests/: README.md  __init__.py  conftest.py  run_tests.sh  test_acpmcp_server.py  test_agent_orchestrator.py  test_fastapi_agent_server.py  test_insurance_agent_server.py  test_integration.py  test_mcpserver.py  test_web_client.py  test_web_client_simple.py
